<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UNIVERSE</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="signup">SIGNUP</string>
    <string name="forgotpassword">FORGOT PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="msg_load_default">Loading</string>
    <string name="password">Password</string>
    <string name="phoneno">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="date_of_survey">Please Enter Date</string>
    <string name="select_state">Select State</string>
    <string name="category1">Category A</string>
    <string name="category2">Category B</string>
    <string name="Categiory3">Category C</string>
    <string name="Categiry4">Category D</string>
    <string name="Categiry5">Category E</string>

    <string name="fivequestions">5/5</string>
    <string name="state">State</string>
    <string name="search">Enter The State</string>
    <string name="select_city">Select City</string>
    <string name="select_location">Mandi/Location of shop</string>
    <string name="name_of_the_shop">Enter Shop Name</string>
    <string name="owner">Enter Shop Owner Name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="err_msg_name">Enter The Text</string>
    <string name="contact_of_owner">Enter The Contact Owner</string>
    <string name="followUp">Follow Up Question Based On Previous Question</string>
    <string name="Herbicide">Herbicide</string>
    <string name="Insecticide">Insecticide</string>
    <string name="PGR">PGR</string>
    <string name="Seeds">Seeds</string>

</resources>
